Changes for 1.0.4

* fix bug 2816632 Marine unit doesn't work with LL (sgb)

* fix bug 1888062 multinational transport bug (sgb)

* remove non working "Use Destroyers and Artillery" in Iron Blitz (sgb)

* fix bug 2815448, AA50: Defending subs don't get sneak defense (sgb)

* fix bug 2803021, NWO IPCs to spend don't display (sgb)

* move copies of blank_relief to images/relief tiles, this allows all maps to share a copy (sgb)

* change labels/dialog on repair screen to make it clear we are not purchasing units (sgb)

* fix bug 2802962, bug where units loaded onto transports in a pending battle zone do not die when their trasnsports do (sgb)

* fix bug 2807875, Factories count towards production limit (sgb)

* fix bug 2815801 Bid placement Error (sgb)

* Complete gutting of NonCombatMoveSea; Removed most plane analysis code and replaced with calls to invitePlaneAttack in SUtils; 
  tweak to purchasing when resources are high to help with other maps; 
  prepared code for purchasing units for the best transport attack (Kevin Moore)

* Add some missing units for NWO and activate tech for extra 4 players in NWO-9 (ComradeKev)

* Check if SBR damages unit production before displaying factory damage (ComradeKev)

* Fix bug 2801738 just use Infantry instead of chineseInfantry so they stack properly (ComradeKev)

* Add victory conditions to game notes (ComradeKev)

* Add NOs to game notes for AA50 (ComradeKev)

* Fix bug 2807397 Revise NWO 9 Player placements for E/W Romania (ComradeKev)

* Fix number of paratroops shown loading on to bomber (ComradeKev)

* Change default route finding to try land routes first (ComradeKev)

* Fix allMatch and someMatch returning true on empty collections (ComradeKev)

* Add victory conditions to game notes (ComradeKev)

* Enable turning on/off relief tiles on AA50 (ComradeKev)

* Add Relief Tiles for AA50 (Much thanks to Imperious Leader)

* Fix bug 281534 fighter movement calculation (ComradeKev)
