@@ -4,7 +4,7 @@
 
 <game>
 
-        <info name="Great War" version="2.22"/>
+        <info name="Great War" version="2.23"/>
 
         <loader javaClass="games.strategy.triplea.TripleA"/>
 
@@ -1853,6 +1853,7 @@
                          <option name="attack" value="1"/>
                          <option name="defense" value="2"/>
                          <option name="artillerySupportable" value="true"/>
+                         <option name="isInfantry" value="true"/>
                     </attatchment>
 
                     <attatchment name="unitAttatchment" attatchTo="cavalry" javaClass="games.strategy.triplea.attatchments.UnitAttachment" type="unitType">
