@@ -3,7 +3,7 @@
 <!DOCTYPE game SYSTEM "game.dtd">
 
 <game>
-        <info name="Revised" version="1.3.3"/>
+        <info name="Revised" version="1.3.4"/>
         
         <loader javaClass="games.strategy.triplea.TripleA"/>
 
@@ -847,6 +847,7 @@
                          <option name="attack" value="1"/>
                          <option name="defense" value="2"/>
                          <option name="artillerySupportable" value="true"/>
+                         <option name="isInfantry" value="true"/>
                     </attatchment>
             
                     <attatchment name="unitAttatchment" attatchTo="artillery" javaClass="games.strategy.triplea.attatchments.UnitAttachment" type="unitType">
